--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SampleOrdersForDistribuation"></activity>
+        <activity android:name=".SampleOrdersForDistributing"/>
         <activity android:name=".DailySalesReprt" />
         <activity android:name=".DistributedOrders" />
         <activity android:name=".OrdersForDistribution" />
