--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation("androidx.recyclerview:recyclerview:1.2.0-alpha05")
+
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation 'com.android.support:multidex:1.0.3'
 
 }
