--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.firebase:firebase-database:19.4.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -43,5 +44,14 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0-alpha02'
     implementation 'com.android.support:multidex:1.0.3'
+
+
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+
+
+
+
 
 }
