--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -34,6 +34,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.firebase:firebase-database:19.4.0'
     implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.google.firebase:firebase-firestore:21.6.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -46,12 +47,16 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
 
 
+    // Don't remove any dependency from here for any reason - harsha
+    implementation 'com.firebaseui:firebase-ui-firestore:6.3.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.android.support:multidex:1.0.3'
 
+    implementation 'com.google.firebase:firebase-firestore';
 
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
 
-
+    implementation 'com.firebaseui:firebase-ui-database:6.3.0'
 
 
 }
