--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".IT19208718.AssignedOrdersForRiders" />
+        <activity android:name=".IT19207650.AddNewFood" />
+        <activity android:name=".IT19213972.CustomerRegister"/>
+        <activity android:name=".IT19213972.ConfirmOrder" />
+        <activity android:name=".IT19213972.Cart" />
+        <activity android:name=".IT19213972.FoodDetails" />
+        <activity android:name=".IT19213972.EditOrder" />
+        <activity android:name=".IT19213972.FoodHome"/>
 
-        <activity android:name=".IT19208718.MainLogin" android:label="Welcome to FreshFred">
+        <activity
+            android:name=".IT19208718.ManageRiders"
+            android:label="Manage Your Riders" />
+        <activity
+            android:name=".IT19208718.MainLogin"
+            android:label="Welcome to FreshFred">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".IT19207650.OrderList" />
         <activity
             android:name=".IT19208718.OrdersForDistribution"
             android:label="Order Queue" />
@@ -44,10 +54,9 @@
         <activity android:name=".IT19216492.OrderRequest" />
         <activity android:name=".IT19216492.UpdateSupplierDetails" />
         <activity android:name=".IT19216492.SupplierPortal" />
-        <activity android:name=".IT19216492.AddNewSupplier" />
         <activity
-            android:name=".IT19208718.DailySalesReport"
-            android:label="Daily Sales Report" />
+            android:name=".IT19208718.RiderEarningHistory"
+            android:label="Your Earning History" />
         <activity
             android:name=".IT19208718.DistributedOrders"
             android:label="Delivered Summary" />
@@ -57,9 +66,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <meta-data
             android:name="preloaded_fonts"
