--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".IT19216492.RecyclerView2.RequestSupplyOrderHome"/>
+
 
         <meta-data
             android:name="preloaded_fonts"
