--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,8 @@
         </activity>
 
         <activity android:name=".IT19216492.RecyclerView2.RequestSupplyOrderHome"/>
+        <activity android:name=".IT19216492.RecyclerView1.SupplierHome"/>
+        <activity android:name=".IT19216492.AddNewSupplier"/>
 
 
         <meta-data
